[gd_scene load_steps=28 format=3 uid="uid://bpoy5m1sp32o7"]

[ext_resource type="Texture2D" uid="uid://oktbr7f5wsr" path="res://textures/message_box.png" id="1_w8iix"]
[ext_resource type="Script" path="res://scenes/intro.gd" id="1_wu5ir"]
[ext_resource type="Script" path="res://madtalk/madtalk_runtime.gd" id="2_jn242"]
[ext_resource type="FontFile" uid="uid://ckhxdr4lr461o" path="res://fonts/BebasNeue-Regular.otf" id="3_b1d7w"]
[ext_resource type="Texture2D" uid="uid://dwwc0gl6j7lnu" path="res://textures/portrait_hangman.png" id="3_wovry"]
[ext_resource type="Script" path="res://madtalk/CharacterData.gd" id="4_ci2vk"]
[ext_resource type="FontFile" uid="uid://cyshajh7d2psd" path="res://fonts/Roboto-Light.ttf" id="4_h8mkb"]
[ext_resource type="AudioStream" uid="uid://balh0xa8n5cci" path="res://audio/amb/intro.ogg" id="5_q4sg6"]
[ext_resource type="Texture2D" uid="uid://4ah1yn2aesrs" path="res://textures/portrait_katrina.png" id="5_rr1ci"]
[ext_resource type="Texture2D" uid="uid://dsenikov13blj" path="res://textures/portrait_scientist.png" id="6_ostgy"]
[ext_resource type="PackedScene" uid="uid://cbnffggqog4tf" path="res://objects/briefing_scene.tscn" id="7_oguo8"]

[sub_resource type="Resource" id="Resource_2e7i7"]
script = ExtResource("4_ci2vk")
id = "hangman"
name = "H A N G M A N"
avatar = ExtResource("3_wovry")
variants = {}

[sub_resource type="Resource" id="Resource_t4ruw"]
script = ExtResource("4_ci2vk")
id = "katrina"
name = "K A T R I N A"
avatar = ExtResource("5_rr1ci")
variants = {}

[sub_resource type="Resource" id="Resource_mhfcj"]
script = ExtResource("4_ci2vk")
id = "scientist"
name = "S C I E N T I S T"
avatar = ExtResource("6_ostgy")
variants = {}

[sub_resource type="Resource" id="Resource_qcper"]
script = ExtResource("4_ci2vk")
id = "narrator"
name = ""
variants = {}

[sub_resource type="Resource" id="Resource_0fmqo"]
script = ExtResource("4_ci2vk")
id = "computer"
name = ""
variants = {}

[sub_resource type="Animation" id="Animation_ft8p5"]
resource_name = "DialogFadeIn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kykmm"]
resource_name = "DialogFadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_s4x76"]
resource_name = "MenuFadeIn"
length = 0.2

[sub_resource type="Animation" id="Animation_7ege1"]
resource_name = "MenuFadeOut"
length = 0.2

[sub_resource type="Animation" id="Animation_cf6ur"]
resource_name = "MessageBoxFadeIn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MessageBox:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MessageBox:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4k3jo"]
resource_name = "MessageBoxFadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MessageBox:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MessageBox:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_viapt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MessageBox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MessageBox:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7rqyp"]
_data = {
"DialogFadeIn": SubResource("Animation_ft8p5"),
"DialogFadeOut": SubResource("Animation_kykmm"),
"MenuFadeIn": SubResource("Animation_s4x76"),
"MenuFadeOut": SubResource("Animation_7ege1"),
"MessageBoxFadeIn": SubResource("Animation_cf6ur"),
"MessageBoxFadeOut": SubResource("Animation_4k3jo"),
"RESET": SubResource("Animation_viapt")
}

[sub_resource type="Animation" id="Animation_rv3i2"]
resource_name = "fade_out"
length = 2.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/Blackout:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Audio_Ambience:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -40.0]
}

[sub_resource type="Animation" id="Animation_mkqlm"]
resource_name = "fade_in"
length = 5.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/Blackout:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3sem7"]
_data = {
"fade_in": SubResource("Animation_mkqlm"),
"fade_out": SubResource("Animation_rv3i2")
}

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wu5ir")

[node name="MadTalk" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_jn242")
ListOfCharacters = Array[ExtResource("4_ci2vk")]([SubResource("Resource_2e7i7"), SubResource("Resource_t4ruw"), SubResource("Resource_mhfcj"), SubResource("Resource_qcper"), SubResource("Resource_0fmqo")])
DialogMainControl = NodePath("../HUD/Dialog")
DialogMessageBox = NodePath("../HUD/Dialog/MessageBox")
DialogMessageLabel = NodePath("../HUD/Dialog/MessageBox/MessageLabel")
DialogSpeakerLabel = NodePath("../HUD/Dialog/MessageBox/Speaker")
DialogSpeakerAvatar = NodePath("../HUD/Dialog/MessageBox/Avatar")
DialogButtonsMenu = NodePath("../HUD/Dialog/MenuBox")
DialogButtonsContainer = NodePath("../HUD/Dialog/MenuBox/VBox")
DialogAnimationPlayer = NodePath("../HUD/Dialog/DialogUIAnimationPlayer")
TransitionAnimationName_DialogFadeIn = "DialogFadeIn"
TransitionAnimationName_DialogFadeOut = "DialogFadeOut"
TransitionAnimationName_MessageBoxFadeIn = "MessageBoxFadeIn"
TransitionAnimationName_MessageBoxFadeOut = "MessageBoxFadeOut"
TransitionAnimationName_MenuFadeIn = "MenuFadeIn"
TransitionAnimationName_MenuFadeOut = "MenuFadeOut"
AnimateText = false

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BriefingScene" parent="." instance=ExtResource("7_oguo8")]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Dialog" type="Control" parent="HUD"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="MessageBox" type="ReferenceRect" parent="HUD/Dialog"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -211.0
offset_right = 720.0
offset_bottom = -51.0
grow_vertical = 0

[node name="MessageBackground" type="TextureRect" parent="HUD/Dialog/MessageBox"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_w8iix")

[node name="Avatar" type="TextureRect" parent="HUD/Dialog/MessageBox"]
layout_mode = 0
offset_left = 16.0
offset_top = -16.0
offset_right = 144.0
offset_bottom = 144.0
texture = ExtResource("3_wovry")
expand_mode = 4
stretch_mode = 4
metadata/_edit_lock_ = true

[node name="Speaker" type="Label" parent="HUD/Dialog/MessageBox"]
layout_mode = 0
offset_left = 160.0
offset_top = 12.0
offset_right = 305.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_fonts/font = ExtResource("3_b1d7w")
theme_override_font_sizes/font_size = 24
text = "K A T R I N A"
metadata/_edit_lock_ = true

[node name="MessageLabel" type="RichTextLabel" parent="HUD/Dialog/MessageBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 160.0
offset_top = 45.0
offset_right = -40.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("4_h8mkb")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Thrilled to hear it. You'll puncture through the outer hull. Intel confirms no survivors in the living quarters, so we've depressurised them remotely."
metadata/_edit_lock_ = true

[node name="DialogUIAnimationPlayer" type="AnimationPlayer" parent="HUD/Dialog"]
libraries = {
"": SubResource("AnimationLibrary_7rqyp")
}

[node name="SFXVoiceClips" type="AudioStreamPlayer" parent="HUD/Dialog"]

[node name="Blackout" type="ColorRect" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Audio_Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_q4sg6")
bus = &"AMB"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3sem7")
}

[connection signal="dialog_finished" from="MadTalk" to="." method="_on_mad_talk_dialog_finished"]
[connection signal="voice_clip_requested" from="MadTalk" to="." method="_on_mad_talk_voice_clip_requested"]
[connection signal="finished" from="HUD/Dialog/SFXVoiceClips" to="." method="_on_sfx_voice_clips_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
